# emstar

./: .gitignore  API.md  Cargo.toml  LICENSE  README.md
benches/: operations.rs  parse.rs  write.rs
examples/: basic_usage.rs  crud_operations.rs  statistics.rs
src/: error.rs  lib.rs  parser.rs  types.rs  writer.rs
tests/: Report.md  integration_test.rs  test_all_apis.rs  test_data.rs
